@@ -1,3 +1,13 @@
+2007-02-09  Ikumi Keita	<ikumi@ikumi.que.jp>
+
+	* tex-jp.el (japanese-TeX-command-list): Add
+	`TeX-run-discard-foreground' and `TeX-run-function' for
+	function-item.
+	(japanese-TeX-set-process-coding-system): New function.
+	(TeX-after-start-process-function): Use it.  Cater for the
+	accidental case that no-Japanese loads tex-jp.el and his
+	coding-system is set to unexpected one.
+
 2007-02-05  Ralf Angeli  <angeli@caeruleus.net>
 
 	* tex.el (TeX-submit-bug-report): Remove unnecessary code.
